# repo-ml-analysis-service

./: .gitignore  README.md  main.py  pyproject.toml  railway.toml  requirements.txt
utils/: languages.py
